src/test/deca/context/invalid/sansObjet/BadString.deca
{
    String chaine = 2020;
}